Contrast issues fixed

--- a/arches_her/media/css/report_templates.css
+++ b/arches_her/media/css/report_templates.css
@@ -89,7 +89,6 @@
 
 .aher-report-name {
     padding-right: 5px;
-    color: #888;
     font-size: 14px;
 }
 
@@ -122,9 +121,14 @@
 }
 
 .aher-report-a {
-    color: steelblue !important;
+    color: #315B7D !important;
     font-size: 13px;
     padding: 3px 8px;
+}
+
+.aher-report-a:focus,
+.aher-report-a:hover {
+    text-decoration: underline;
 }
 
 .aher-report-a.disabled {
@@ -647,7 +651,6 @@ h3.shim:hover {
 
 .aher-nodata-note {
     font-size: 14px;
-    color: #888;
     margin-bottom: 20px;
     margin-left: 10px;
     display: inline-block;
@@ -737,7 +740,6 @@ h3.shim:hover {
 }
 
 .aher-block-value {
-    color: #777;
     display: inline-block;
     font-size: 15px;
 }
